--- a/basement.html
+++ b/basement.html
@@ -69,7 +69,8 @@
 <div class="buttons">
     <button><a href="">Laboratorio</a></button>
     <button><a href="./bethroom.html">Bethroom</a></button>
-    <button><a href="./livingroom.html">Livingroom</a></button> 
+    <button><a href="./livingroom.html">Livingroom</a></button>
+    <button><a href="./kitchen.html">Kitchen</a></button> 
     <button><a href="./mainCorridor.html">Main Corridor</a></button> 
 </div>
 </body>
