--- a/bethroom.html
+++ b/bethroom.html
@@ -240,6 +240,7 @@
         }
 
         printPuzzle();
+
     </script>
 
     <div class="buttons">
@@ -250,7 +251,8 @@
     <div class="buttons">
         <button><a href="">Laboratorio</a></button>
         <button><a href="./livingroom.html">Livingroom</a></button>
-        <button><a href="./basement.html">Basement</a></button>  
+        <button><a href="./basement.html">Basement</a></button>
+        <button><a href="./kitchen.html">Kitchen</a></button>  
         <button><a href="./mainCorridor.html">Main Corridor</a></button> 
     </div>
 
