--- a/mainCorridor.html
+++ b/mainCorridor.html
@@ -32,6 +32,7 @@
                 <button><a href="./bethroom.html">Bethroom</a></button>
                 <button><a href="./livingroom.html">Livingroom</a></button>
                 <button><a href="./basement.html">Basement</a></button>
+                <button><a href="./kitchen.html">Kitchen</a></button>
             </div>
     </header>
 </body>
