--- a/bethroom.html
+++ b/bethroom.html
@@ -8,9 +8,10 @@
 
     <link rel="stylesheet" href="./styles/bethroom.css" />
     <link rel="stylesheet" href="./styles/itemMenu.css" />
+    
     <script type="text/javascript" src="./index.js" charset="UTF-8"></script>
     <script type="text/javascript" src="./components/ItemMenu.js" charset="UTF-8"></script>
-    <script type="module" src="./components/PuzzleGrid.js"></script>
+    <script type="text/javascript" src="./components/PuzzleGrid.js"></script>
 </head>
 <body>
 
@@ -204,7 +205,7 @@
             player.item2.itemImg = 'Llave2';
             player.item2.itemDescription = 'Llave2';
 
-            printInventory()
+            // printInventory()
 
             console.log('hecho');
 
@@ -264,7 +265,9 @@
         <button><a href="./mainCorridor.html">Main Corridor</a></button> 
     </div>
 
-    <div id="inventory"></div>
-    <script>printInventory();</script>
+    <!-- <div id="inventory"></div>
+    <script>console.log(this.player);
+    printInventory();</script> -->
+
 </body>
 </html>
