--- a/kitchen.html
+++ b/kitchen.html
@@ -180,7 +180,7 @@
         <button><a href="./mainCorridor.html">Main Corridor</a></button> 
     </div>
 
-    <div id="inventory"></div>
-    <script>printInventory();</script>
+    <!-- <div id="inventory"></div>
+    <script>printInventory();</script> -->
 </body>
 </html>
