index text changed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="start">
 
       <h1>The Mansion</h1>
-      <p>v 1.0.0</p>
+      <p>- DEVELOPING -</p>
 
       <span class="text"> 
         <p>
