index text changed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>...¿o si lo es?...MUAHAHAHAHA...espero que te guste ;).</p>
       </span>
 
-      <p>En el archivo 'README' de la carpeta del proyecto, encontrarás ayudas para cada sección.</p>
+      <p>En el archivo 'README' de la carpeta del proyecto, encontrarás una explicación de cada sección, puede incluir 'spoilers'</p>
 
       <button><a href="./intro.html">start</a></button>
 
